--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,10 @@ version: 1
 runtime: python
 api_version: 1
 
+builtins:
+- datastore_admin: on
+- appstats: on
+
 handlers:
 - url: /static
   static_dir: static
@@ -16,4 +20,4 @@ handlers:
     
 - url: /.*
   script: main.py
-  
+   
