HTML templates for website.

--- a/index.yaml
+++ b/index.yaml
@@ -21,3 +21,9 @@ indexes:
   - name: status_id
   - name: date
     direction: desc
+
+- kind: Brag
+  properties:
+  - name: user
+  - name: create_date
+    direction: desc
